--- a/myCSS.css
+++ b/myCSS.css
@@ -41,7 +41,8 @@ a:hover, a:active, a:focus {
 }
 .content {
 	background: #EEEEEE;
-	margin: 5px;
+	margin: 0px;
+	padding: 10px;
 	float: left;
 	width: 100%;
 	text-align: left;
